--- a/src/styles.css
+++ b/src/styles.css
@@ -31,13 +31,13 @@ a.nav-link {
 
 .bg::before {
   content: "";
-  background-color: rgba(0, 0, 0, 0.5); /* Black color with 50% opacity */
+  background-color: rgba(0, 0, 0, 0.5);
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 1; /* Ensure it overlays the background image */
+  z-index: 1;
 }
 
 .bg h1 {
@@ -117,13 +117,13 @@ a.nav-link {
 .book-info {
   display: flex;
   flex-direction: column;
-  justify-content: center; /* Center-align the text */
+  justify-content: center;
 }
 
 .book-title {
   font-size: 16px;
   font-weight: bold;
-  margin-bottom: 5px; /* Space between title and author */
+  margin-bottom: 5px;
 }
 
 .book-author {
@@ -143,10 +143,31 @@ a.nav-link {
   background-image: url(../src/components/Images/Group\ 4.png);
   background-size: cover;
   overflow: hidden;
+  border-bottom: 1px solid black;
 }
 
 .CTA .host {
   position: absolute;
   top: 20%;
   left: 40%;
+}
+
+.footer {
+  margin: 0 auto;
+  width: 85%;
+  margin-top: 40px;
+}
+
+.footer-cont {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.footer-cont p {
+  color: #555;
+}
+
+.footer-cont .black {
+  color: black;
 }
