--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Rouge+Script&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rouge+Script&display=swap');
 body {
-  font-family: "Poppins", serif;
+  font-family: 'Poppins', serif;
   background-color: #fff;
 }
 
@@ -37,7 +37,8 @@ a.nav-link:hover {
   display: flex;
 }
 
-.nav-buttons button {
+.nav-buttons button,
+.nav-buttons button:nth-child(2) {
   background-color: #0a58ca;
   color: white;
   font-size: 18px;
@@ -60,7 +61,7 @@ a.nav-link:hover {
   position: relative;
   width: 100%;
   height: 100vh;
-  background-image: url("components/Images/pexels-rafael-cosquiere-1059286-2041540.jpg");
+  background-image: url('components/Images/pexels-rafael-cosquiere-1059286-2041540.jpg');
   background-size: cover;
   background-position: center;
   overflow: hidden;
@@ -71,7 +72,7 @@ a.nav-link:hover {
 }
 
 .bg::before {
-  content: "";
+  content: '';
   background-color: rgba(0, 0, 0, 0.5);
   position: absolute;
   top: 0;
